--- a/Css/t12.css
+++ b/Css/t12.css
@@ -2,8 +2,8 @@
 p {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
+  font-weight:500;
+  font-style:italic;
   font-variation-settings:
     "wdth" 100;
 }
